--- a/css/main.css
+++ b/css/main.css
@@ -5428,4 +5428,7 @@ input.calendar:focus, input.calendar:checked, input.calendar:active, input.calen
 #calendarx {
   margin-top: 30px; }
 
+.kvkk-popup {
+  max-width: 500px; }
+
 /*# sourceMappingURL=main.css.map */
