--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,6 +82,8 @@ a {
     display: inline-block;
     cursor: pointer;
     background-color:#fff;
+    -moz-border-radius:20px;
+    -webkit-border-radius:20px;
     border-radius: 20px;
     font-size:17px;
     font-weight: 500;
@@ -111,6 +113,8 @@ a {
     color:#007BFF;
     border:1px solid #007BFF;
     background:#fff;
+    -moz-border-radius:30px;
+    -webkit-border-radius:30px;
     border-radius: 30px;
     font-size:17px;
     font-weight: 500;
@@ -562,6 +566,8 @@ a {
     }
 }
 .new-form-input {
+    -moz-border-radius:30px;
+    -webkit-border-radius:30px;
     border-radius: 30px;
     border-color:#65A3E6;
     @media (min-width:1400px) {
@@ -633,174 +639,172 @@ a {
 
 /*Index Start*/
 /*Index - Header*/
-.header {
-    .top-head {
-        position: relative;
-        @media (min-width:1400px) {
-            padding:55px 98px 0 45px;
-        }
-        @media (min-width:1200px) and (max-width:1399px)  {
-            padding:40px 5% 0 3%;
-        }
-        .mobile-menu-icon {
-            @media (min-width:1200px) {
-                display: none;
-            }
-            @media (max-width:1199px) {
-                display: block;
-                position: absolute;
-                top:15px;
-                right: 20px;
-                z-index: 1000;
-            }
-            @media (min-width:968px) {
-                .menu-icon-blue {
-                    display: none;
-                }
-            }
-            @media (max-width:967px) {
-                .menu-icon-white {
-                    display: none;
-                }
-                .menu-icon-blue {
-                    display: block;
-                }
-            }
-
+.top-head {
+    position: relative;
+    @media (min-width:1400px) {
+        padding:55px 98px 0 45px;
+    }
+    @media (min-width:1200px) and (max-width:1399px)  {
+        padding:40px 5% 0 3%;
+    }
+}
+.mobile-menu-icon {
+    @media (min-width:1200px) {
+        display: none;
+    }
+    @media (max-width:1199px) {
+        display: block;
+        position: absolute;
+        top:15px;
+        right: 20px;
+        z-index: 1000;
+    }
+    @media (min-width:968px) {
+        .menu-icon-blue {
+            display: none;
         }
     }
-    .main-menu {
-        width: 100%;
-        @media (min-width:1200px) {
+    @media (max-width:967px) {
+        .menu-icon-white {
+            display: none;
+        }
+        .menu-icon-blue {
             display: block;
         }
-        @media (max-width:1199px) {
-            display: none;
-        }
-        .menu-left {
-            .nav-head-menu {
-                ul {
-                    li {
-                        @media (min-width:1400px) {
-                            padding-right:40px ;
-                        }
-                        @media (min-width:1200px) and (max-width:1399px)  {
-                            padding-right:20px ;
-                        }
-                        a {
-                            display: inline-block;
-                            font-size:17px;
-                            font-weight: 700;
-                        }
-                    }
-                }
-            }
-        }
-        .menu-right {
-            .nav-head-select {
-                ul {
-                    li {
-                        @media (min-width:1400px) {
-                            padding-left: 30px;
-                        }
-                        @media (min-width:1200px) and (max-width:1399px) {
-                            padding-left: 18px;
-                        }
-                    }
-                }
-            }
-        }
     }
-    .main-logo {
-        @media (min-width:2860px) {
-            margin-right: 10%;
-        }
-        @media (min-width:2160px) and (max-width:2859px) {
-            margin-right: 7%;
-        }
-        @media (min-width:1400px) and (max-width:2159px) {
-            margin-right: 92px;
-        }
-        @media (min-width:1200px) and (max-width:1399px)  {
-            margin-right: 5%;
-        }
-        @media (min-width:768px) and (max-width:1199px) {
-            max-width: 200px;
-            padding:10px 0 0 10px;
-            img {
-                display: block;
-                width: 100%;
-            }
-        }
-        @media (max-width:767px) {
-            max-width: 170px;
-            padding:10px 0 0 10px;
-            img {
-                display: block;
-                width: 100%;
-            }
-        }
+
+}
+.main-menu {
+    width: 100%;
+    @media (min-width:1200px) {
+        display: block;
     }
-    .mobile-menu {
+    @media (max-width:1199px) {
         display: none;
-        @media (min-width:1200px) {
-            display: none;
-        }
-        @media (max-width:1199px) {
-            display: none;
-            width: 100%;
-            height: 100vh;
-            top:0;
-            left: 0;
-            right: 0;
-            position: fixed;
-            padding:20px;
-            z-index: 100000;
-            background-color: transparent;
-            background: url(../img/bg-still2.png);
-            background-position: center center;
-            background-size: cover;
-            background-repeat: no-repeat;
-            .mobile-menu-close {
-                position: absolute;
-                top:15px;
-                right: 20px;
-                width: 40px;
-                height: 40px;
-                img{
-                    display: block;
-                    width: 100%;
-                }
-            }
-            .mobile-logo {
-                width: 170px;
-                img {
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                }
-            }
-            .mobilenav-ul {
-                padding-top:80px;
-                padding-bottom:50px;
-                text-align: center;
-                .mobilenav-li {
+    }
+    .menu-left {
+        .nav-head-menu {
+            ul {
+                li {
+                    @media (min-width:1400px) {
+                        padding-right:40px ;
+                    }
+                    @media (min-width:1200px) and (max-width:1399px)  {
+                        padding-right:20px ;
+                    }
                     a {
-                        display: block;
-                        width: 100%;
-                        padding-bottom:30px;
-                        color:#fff;
-                        font-size:18px;
-                        font-weight: 500;
+                        display: inline-block;
+                        font-size:17px;
+                        font-weight: 700;
                     }
-                }   
+                }
             }
-            .mobile-nav-btns {
-                nav ul {
-                    text-align: center;
-                    li {
-                        margin-bottom:20px;
+        }
+    }
+    .menu-right {
+        .nav-head-select {
+            ul {
+                li {
+                    @media (min-width:1400px) {
+                        padding-left: 30px;
                     }
+                    @media (min-width:1200px) and (max-width:1399px) {
+                        padding-left: 18px;
+                    }
+                }
+            }
+        }
+    }
+}
+.main-logo {
+    @media (min-width:2860px) {
+        margin-right: 10%;
+    }
+    @media (min-width:2160px) and (max-width:2859px) {
+        margin-right: 7%;
+    }
+    @media (min-width:1400px) and (max-width:2159px) {
+        margin-right: 92px;
+    }
+    @media (min-width:1200px) and (max-width:1399px)  {
+        margin-right: 5%;
+    }
+    @media (min-width:768px) and (max-width:1199px) {
+        max-width: 200px;
+        padding:10px 0 0 10px;
+        img {
+            display: block;
+            width: 100%;
+        }
+    }
+    @media (max-width:767px) {
+        max-width: 170px;
+        padding:10px 0 0 10px;
+        img {
+            display: block;
+            width: 100%;
+        }
+    }
+}
+.mobile-menu {
+    display: none;
+    @media (min-width:1200px) {
+        display: none;
+    }
+    @media (max-width:1199px) {
+        display: none;
+        width: 100%;
+        height: 100vh;
+        top:0;
+        left: 0;
+        right: 0;
+        position: fixed;
+        padding:20px;
+        z-index: 100000;
+        background-color: transparent;
+        background: url(../img/bg-still2.png);
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        .mobile-menu-close {
+            position: absolute;
+            top:15px;
+            right: 20px;
+            width: 40px;
+            height: 40px;
+            img{
+                display: block;
+                width: 100%;
+            }
+        }
+        .mobile-logo {
+            width: 170px;
+            img {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .mobilenav-ul {
+            padding-top:80px;
+            padding-bottom:50px;
+            text-align: center;
+            .mobilenav-li {
+                a {
+                    display: block;
+                    width: 100%;
+                    padding-bottom:30px;
+                    color:#fff;
+                    font-size:18px;
+                    font-weight: 500;
+                }
+            }   
+        }
+        .mobile-nav-btns {
+            nav ul {
+                text-align: center;
+                li {
+                    margin-bottom:20px;
                 }
             }
         }
@@ -1357,6 +1361,8 @@ a {
 }
 .contact-box {
     padding:44px 38px;
+    -moz-border-radius:36px;
+    -webkit-border-radius:36px;
     border-radius: 36px;
 }
 .contact-box2 {
@@ -1621,6 +1627,8 @@ a {
     }
     // Basic CARD
     .packet-card, .enterprise {
+        -moz-border-radius:36px;
+        -webkit-border-radius:36px;
         border-radius: 36px;
         -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.11);
         -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.11);
@@ -1740,6 +1748,8 @@ a {
                         display: block;
                         width: 5px;
                         height: 5px;
+                        -moz-border-radius:5px;
+                        -webkit-border-radius:5px;
                         border-radius: 5px;
                         background-color:#fff;
                     }
@@ -1966,6 +1976,8 @@ a {
         }
         .plans-box {
             background-color:#fff;
+            -moz-border-radius:36px;
+            -webkit-border-radius:36px;
             border-radius: 36px;
             -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
             -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
@@ -2304,6 +2316,8 @@ a {
 /* Register Start */
 .register-box {
     background-color:#fff;
+    -moz-border-radius:36px;
+    -webkit-border-radius:36px;
     border-radius: 36px;
     -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
     -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
@@ -3686,7 +3700,7 @@ a {
   position: absolute;
   font-size: 17px;
   left: 20px;
-  z-index: 10;
+  z-index: 10000 ;
   padding: 1px 10px;
   background: #fff;
   color:#93A0B1;
@@ -3709,7 +3723,6 @@ select.selectric-select:checked + span.check-select-name {
 select.selectric-select:valid + span.check-select-name {
     top:-10px;
 }
-
 /* Date Input */
 .calendar {
   @media (min-width:1200px) {
@@ -5412,6 +5425,8 @@ input.calendar {
 }
 .extra-buy-packet {
     background:#fff;
+    -moz-border-radius:36px;
+    -webkit-border-radius:36px;
     border-radius: 36px;
     -webkit-box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.11);
     -moz-box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.11);
@@ -5439,11 +5454,23 @@ input.calendar {
     cursor: pointer;
     margin-right: 25px;
     &:hover {
+        -moz-outline:3px solid #90A0B3;
+        -webkit-outline:3px solid #90A0B3;
         outline:3px solid #90A0B3;
     }
     margin-bottom:25px;
     &.active {
-        outline:3px solid #009FDD;
+        background-color: #009FDD;
+        .eh-text, .extra-note,
+        .path-price, .path-price-span,
+        .c-price, .c-date {
+            color:#fff;
+        }
+        .card-ticket {
+            span {
+                color:#fff;
+            }
+        }
     }
 }
 .extra-room, .extra-subs {
@@ -5576,6 +5603,8 @@ input.calendar {
                 width: 32px;
                 height: 32px;
                 border:4px solid #EFF2F4;
+                -moz-border-radius:50%;
+                -webkit-border-radius:50%;
                 border-radius: 50%;
                 display: inline-block;
                 &.active {
@@ -5624,6 +5653,8 @@ input.calendar {
                 width: 20px;
                 height: 20px;
                 line-height: 20px;
+                -moz-border-radius:50%;
+                -webkit-border-radius:50%;
                 border-radius: 50%;
                 text-align: center;
                 background:#904BFF;
@@ -5660,6 +5691,8 @@ input.calendar {
     font-weight: 600;
     font-size:20px;
     background-color:#A2B2C5;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
     border-radius: 50%;
     margin-right: 10px;
 }
@@ -5692,6 +5725,7 @@ input.calendar {
     border-right: 4px solid #904BFF;
     &.active {
         display: inline-block;
+        border-color:#fff;
     }
 }
 .extra-buy-packet {
@@ -5769,6 +5803,8 @@ input.calendar {
         width: 290px;
     }
     padding:40px 30px;
+    -moz-border-radius:36px;
+    -webkit-border-radius:36px;
     border-radius: 36px;
     background:#fff;
     -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
@@ -5864,6 +5900,8 @@ input.calendar {
 }
 .success-payment {
     padding:45px;
+    -moz-border-radius:36px;
+    -webkit-border-radius:36px;
     border-radius: 36px;
     border:2px solid #00DD08;
     -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
@@ -6075,6 +6113,8 @@ input.calendar {
         margin-bottom:0;
     }
     background-color:#fff;
+    -moz-border-radius:36px;
+    -webkit-border-radius:36px;
     border-radius: 36px;
     -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
     -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
@@ -6128,11 +6168,15 @@ input.calendar {
             padding-right: 15px;
             &::-webkit-scrollbar {
                 width: 6px;
+                -moz-border-radius:10px;
+                -webkit-border-radius:10px;
                 border-radius: 10px;
                 background:#EFF2F4;
             }
             &::-webkit-scrollbar-thumb {
                 background: #904BFF;
+                -moz-border-radius:10px;
+                -webkit-border-radius:10px;
                 border-radius:10px;
             }
         }
@@ -6140,6 +6184,8 @@ input.calendar {
     .calendar-popup-content {
         @media (max-width:767px) {
             padding:40px 10px 40px 25px;
+            -moz-border-radius:25px;
+            -webkit-border-radius:25px;
             border-radius: 25px;
         }
         .contact-input-box {
@@ -6244,12 +6290,16 @@ input.calendar {
         overflow-y: scroll;
         &::-webkit-scrollbar {
             width: 6px;
+            -moz-border-radius:10px;
+            -webkit-border-radius:10px;
             border-radius: 10px;
             background:#EFF2F4;
         }
         
         &::-webkit-scrollbar-thumb {
             background: #904BFF;
+            -moz-border-radius:10px;
+            -webkit-border-radius:10px;
             border-radius:10px;
         }
     }
@@ -6257,6 +6307,8 @@ input.calendar {
 .mtr-subs-chat {
     background:#F8F9FA;
     padding:40px 30px;
+    -moz-border-radius:36px;
+    -webkit-border-radius:36px;
     border-radius: 36px;
     .mtr-chat-btn{
         @media (max-width:767px) {
@@ -6501,11 +6553,15 @@ input.calendar {
     max-height: 206px;
     border:1px solid #A2B2C5;
     padding:8px 15px 0 30px;
+    -moz-border-radius:32px;
+    -webkit-border-radius:32px;
     border-radius: 32px;
     .dtp-msg-item {
         background-color:#904BFF;
         color:#fff;
         font-size:17px;
+        -moz-border-radius:22px;
+        -webkit-border-radius:22px;
         border-radius: 22px;
         padding:10px 12px 5px 12px;
         margin-bottom:10px;
@@ -6525,11 +6581,15 @@ input.calendar {
     overflow-y: scroll;
     &::-webkit-scrollbar {
         width: 6px;
+        -moz-border-radius:10px;
+        -webkit-border-radius:10px;
         border-radius: 10px;
         background:#EFF2F4;
     }
     &::-webkit-scrollbar-thumb {
         background: #904BFF;
+        -moz-border-radius:10px;
+        -webkit-border-radius:10px;
         border-radius:10px;
     }
 }
@@ -6599,4 +6659,120 @@ input.calendar {
 // KVKK Popup
 .kvkk-popup {
     max-width:500px;
+}
+//Packets Path fixed menu
+.top-fix-menu {
+    @media (min-width:1200px) {
+        padding-bottom:30px;
+    }
+    .main-menu {
+        @media (min-width:1200px) {
+            padding-right: 20px;
+        }
+        .menu-left {
+            .nav-head-menu {
+                ul {
+                    li {
+                        a {
+                            color:#0069E1;
+                            &:hover {
+                                opacity: 0.8;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .menu-right {
+            .nav-head-select {
+                ul {
+                    li {
+                        a {
+                            background-color:#904BFF;
+                            color:#fff;
+                            &:hover {
+                                background-color: #9c63f9;
+                            }
+                        }
+                        a.btn-login {
+                            background-color: #0069E1;
+                            &:hover {
+                                opacity: 0.8;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .mobile-menu-icon {
+        @media (max-width:1199px) {
+            top:-60px;
+        }
+    }
+}
+.fixed-header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+}
+.step-fix.fixed-header {
+    @media (min-width:2560px) and (max-width:3840px) {
+        width: 85%;
+    }
+    @media (min-width:2048px) and (max-width:2559px) {
+        width: 83%;
+    }
+    @media (min-width:1920px) and (max-width:2047px) {
+        width: 81%;
+    }
+    @media (min-width:1400px) and (max-width:1919px) {
+        width: 80%;
+    }
+    @media (min-width:1200px) and (max-width:1399px) {
+        width: 73%;
+    }
+    @media (min-width:768px) and (max-width:1199px) {
+        width: 98%;
+    }
+    @media (max-width:767px) {
+        width: 95%;
+    }
+}
+.back-to-index {
+    color:#007BFF;
+    font-weight: 500;
+    @media (max-width:420px) {
+        display: block;
+        padding:15px 0px;
+        text-align: center;
+    }
+}
+.path-btns {
+    @media (max-width:420px) {
+        text-align: center;
+    }
+}
+.mt-top-fix {
+    padding-top:216px;
+}
+.selectric-languagex {
+    &.activated {
+        span.check-select-name {
+            top:-10px;
+        }
+    }
+}
+.ext-sm {
+    @media (max-width:415px) {
+        max-width: 45%!important;
+        min-width: 0px!important;
+        margin-right: 5%;
+    }
+}
+#ek_kayit, #k_katilimcisi {
+    @media (max-width:1199px) {
+        padding-right: 20px;
+    }
 }
